freesia/manifests/temporis/remo-exporter/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: remo-exporter
spec:
  replicas: 1
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9352"
        prometheus.io/path: /metrics
    spec:
      containers:
        - name: remo-exporter
          image: kenfdev/remo-exporter:latest
          ports:
            - name: http
              containerPort: 9352
          resources:
            requests:
              cpu: 100m
              memory: 50Mi
            limits:
              cpu: 100m
              memory: 50Mi
