freesia/manifests/temporis/remo-exporter/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: remo-exporter
spec:
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 80
    targetPort: http
    name: http-metrics
