freesia/manifests/temporis/remo-exporter/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: remo-exporter

spec:
  routes:
    - kind: Rule
      match: Host(`remo-exporter.harvestasya.org`)
      services:
        - name: remo-exporter
          port: 80
